# cooldown-buffer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
src/: lib.rs
tests/: integration_tests.rs
