# When releasing to crates.io:
#
# - last check for all TODO, FIXME, expect, unwrap.
# - re-read and final polish of documentation
# - run cargo udeps
# - run cargo clippy
# - recheck log statements (informative, none left that were just for development, ...)
# - Update CHANGELOG.md.
# - Update version numbers in Cargo.yml, Cargo.toml, install section of readme.
# - verify CI result
# - run cargo test on dependent crates
# - cargo publish
# - merge dev branch into master
# - create git tag with version number
#
[package]
name = "cooldown-buffer"
version = "0.1.0"
authors = ["Bartosz Zbytniewski <bartosz.zbytniewski.dev@gmail.com>"]
edition = "2021"
description = "Buffers items as long as there is something happening on the channel"
repository = "https://github.com/devzbysiu/cooldown-buffer"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["buffer", "channel", "cooldown", "timer"]
categories = ["concurrency"]
homepage = "https://github.com/devzbysiu/cooldown-buffer"
documentation = "https://docs.rs/cooldown-buffer"

[dependencies]
doc-comment = "0.3.3"
thiserror = "1.0.30"
thread_timer = "0.3.0"

[dev-dependencies]
anyhow = "1.0.53"
version-sync = "0.9.4"
